--- a/flex-layout/style.css
+++ b/flex-layout/style.css
@@ -1,29 +1,93 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
-body {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+
+  body {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    height: 100vh;
 }
+
+
 
 img {
 }
 
-button {
+.buttons {
+    gap: 20px;
+    border: none;
+    border-radius: 8px;
+    padding: 1rem 1.2rem;
+    cursor: pointer;
+    
+   
 }
 
-input {
+.input {
+    display: flex;
+    justify-content: center;
+    min-width: 400px;
+    padding: 8px 24px;
 }
 
 .content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 16px;
 }
 
-a {
+img{
+    width: 400px;
 }
 
-.header,
+
+.a {
+   text-decoration: none;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-links{
+ display: flex;
+ justify-content:space-around;
+ list-style: none;
+ gap: 40px;
+ padding: 35px;
+ 
+
+}
+
+.right-links{
+    display: flex;
+    justify-content:space-around;
+    list-style: none;
+    gap: 40px;
+    padding: 35px;
+
+}
+
 .footer {
+    background-color: grey;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  
+
 }
 
-.footer {
-}
+
 
 ul {
 }
