--- a/flex-layout-2/style.css
+++ b/flex-layout-2/style.css
@@ -1,4 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
@@ -6,7 +16,9 @@ body {
 }
 
 header {
-  height: 72px;
+  display: flex;
+  text-align: center;
+  height: 50px;
   background: darkmagenta;
   color: white;
 }
@@ -15,6 +27,7 @@ footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
 }
 
 aside {
@@ -24,7 +37,20 @@ aside {
 }
 
 .card {
+  width: 200px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+}
+main{
+  flex-grow: 1;
+  display: flex;
+}
+
+section{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 16px;
+  
 }
